@@ -127,11 +127,10 @@ Open Data Schema Map endpoints that list a large number of entities -- Project O
 
 Open Data Schema Map includes a file caching function to save a snapshot of any endpoint as a static file to be served up quickly, with very few hits to the database. 
 
-File caches at present can only be generated by a Drush command. The recommended usage on a production website is to set up a cron job or use a task runner like [Jenkins](https://jenkins.io/) to regenerate the file caches for your performance-intensive endpoints daily, at whatever time your site experiences the least amount of traffic. The trade-off of course is that any additions or changes to your site will not be reflected on these endpoints until they are regenerated.
+File caches can be generated either via a Drush command, or an admin UI. The recommended usage on a production website is to set up a cron job or use a task runner like [Jenkins](https://jenkins.io/) to regenerate the file caches for your performance-intensive endpoints daily (usin the drush command), at whatever time your site experiences the least amount of traffic. The trade-off of course is that any additions or changes to your site will not be reflected on these endpoints until they are regenerated.
 
-An administrative UI to regenerate a file cache manually may be included in a future release.
 
-### Use
+### Drush Use
 
 The Drush command supplied by Open Data Schema Map is `odsm-filecache` (also available simply as the alias `odsmfc`).  This command takes as  its argument the machine name for an ODSM endpoint.  For example:
 
@@ -146,6 +145,12 @@ public://odsm_cache_data_json_1_1
 ```
 
 Now a hit to `/data.json` will be routed to this file, which in most cases will actually live at `/sites/default/files/odsm_cache_data_json_1_1`.
+
+### UI Use
+
+An administrative UI to regenerate file caches manually is also included. This interface is useful in cases where manual creation of the cache files is sufficient.
+
+To use, navigate to admin/config/services/odsm where there is a column called "Cache" with links to the individual admin pages for specific enpoint caches. If there is no cache the link is labled "none", otherwise the link is labled with the age of the cache in hours.  From the cache admin pages you can create, delete or regenerate the cache.
 
 ## Schema Validation
 
